<resources>
    <string name="app_name">PalmFarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_home">Home</string>
    <string name="prompt_password">पारण शब्द</string>
    <string name="action_sign_in">साइन इन करें या रजिस्टर</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="feedback_text">कोई प्रतिपादन?</string>
    <string name="feedback_submit">जमा करें</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="title_activity_first_page">FirstPage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_farmer">Farmer</string>
    <string name="nav_agri">Agriculture Expert</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_camera">Send Picture</string>
    <string name="action_settings">Settings</string>
    <string name="action_theme">Theme</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contactMessage">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--card view-->
    <string name="expandable_card_view_image_content_description">Arrow to expand card</string>
    <string name="expandable_card_view_icon_content_description">Card icon</string>
</resources>
