<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_farmer"
        android:icon="@drawable/ic_local_florist_black_24dp"
        android:title="@string/nav_farmer" />
    <item
        android:id="@+id/nav_expert"
        android:icon="@drawable/ic_expert_black_24dp"
        android:title="@string/nav_agri" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/nav_about_us"
        android:title="@string/nav_about_us"
        android:icon="@drawable/ic_info_black_24dp"/>
    <item
        android:id="@+id/nav_contact_us"
        android:title="@string/nav_contact_us"
        android:icon="@drawable/ic_menu_send"/>
    <item
        android:id="@+id/nav_faq"
        android:title="@string/nav_faq"
        android:icon="@drawable/ic_question_answer_black_24dp"/>
    <item
        android:id="@+id/logout"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_lock_black_24dp"/>
</menu>
