<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/signupColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="CONTACT US" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/contactus"
        tools:context=".ContactUs">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="44dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/contact_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shapelogin"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="Phone\n+91 8329664275"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shapelogin"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="Email\nritikat66@gmail.com" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/contactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/contactEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/contactMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:hint="@string/contactMessage"
                    android:inputType="textMultiLine"
                    android:padding="20dp" />

                <ImageButton
                    android:id="@+id/sendEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button"
                    android:padding="10dp"
                    android:src="@drawable/ic_menu_send" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>